--- a/myApp/package.json
+++ b/myApp/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.1",
     "react-barcode-reader": "0.0.2",
     "react-bootstrap": "^1.4.0",
+    "react-csv": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
